fixing the responsiveness on mobile...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,12 @@
 
 * {
 	box-sizing: border-box;
+	margin: 0;
 }
 
 html {
 	box-sizing: border-box;
+	margin: 0;
 }
 
 nav {
@@ -12,18 +14,7 @@ nav {
 	padding-top: 1rem;
 	background-color: #dcf2f0;
 	border: 0.2em solid #3399F3;
-}
-
-.priceMain {
-	
-	display: grid;
-	grid-template-columns: 6rem 6rem 6rem;
-	grid-template-rows: 4rem 4rem;
-	grid-gap: 6%;
-	margin-top: 1%;
-	padding: 10px;
-	border: 0.2em solid #3399F3;
-	background-color: #dcf2f0;
+	margin: 0.2%;
 }
 
 hr { 
@@ -35,6 +26,19 @@ hr {
     border-style: inset;
     border-width: 1px;
 } 
+
+.priceMain {
+	
+	display: grid;
+	grid-template-columns: 6rem 6rem 6rem;
+	grid-template-rows: 4rem 4rem;
+	grid-gap: 6%;
+	margin: 1%;
+	padding: 10px;
+	border: 0.2em solid #3399F3;
+	background-color: #dcf2f0;
+}
+
 
 .mainContainer {
 	
@@ -92,6 +96,7 @@ hr {
 	
 	text-align: center;
 	font-size: 1.2rem;
+	background-color: #e3e7ed;
 }
 
 .priceInE {
@@ -106,7 +111,7 @@ hr {
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-template-rows: auto;
 	grid-gap: 1%;
-	margin-top: 1%;
+	margin: 0.3%;
 	padding: 10px;
 	border: 0.2em solid #3399F3;
 	background-color: #dcf2f0;
